--- a/src/App.css
+++ b/src/App.css
@@ -20,8 +20,8 @@
   flex-wrap: wrap;
 }
 
-.item-image {
-  max-width: 20vw;
+.card {
+  max-width: 22vw;
   max-height: 25vh;
-  padding: 10px;
+  padding: 1vw;
 }
