--- a/src/App.css
+++ b/src/App.css
@@ -18,10 +18,60 @@
 #shop {
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-around;
 }
 
-.card {
-  max-width: 22vw;
+.item-card {
+  max-width: 21vw;
   max-height: 25vh;
-  padding: 1vw;
+  /* padding: 2vw; */
+  margin-bottom: 2vh;
+  background-color: transparent;
+  width: 22vw;
+  height: 25vh;
+  border: 1px solid #f1f1f1;
+  perspective: 1000px;
+}
+
+.card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+}
+
+.item-card:hover .card-inner {
+  transform: rotateY(180deg);
+}
+
+.card-front,
+.card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden; /* Safari */
+  backface-visibility: hidden;
+  font-size: 8pt;
+}
+
+.card-front {
+  background-color: #bbb;
+  color: black;
+}
+
+.card-back {
+  background-color: dodgerblue;
+  color: white;
+  transform: rotateY(180deg);
+}
+
+.card-image {
+  max-width: 20vw;
+  max-height: 24vh;
+}
+
+.description {
+  font-size: 6pt;
 }
